force-app/main/default/objects/JMS_Broker_Call_Landing__c/JMS_Broker_Call_Landing__c.object-meta.xml
<CustomObject>
    <label>Broker Call Landing</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Broker Call Landing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Call Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>