force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Batch_Id__c</fullName>
    <description>To capture Batch Id</description>
    <label>Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>