force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Broker_call_id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_call_id__c</fullName>
    <label>Broker Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>