force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Call_Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Distributor_Code__c</fullName>
    <description>Call Distributor Code</description>
    <label>Call Distributor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>