force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Company_Broker_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Broker_Territory_Name__c</fullName>
    <description>Broker Territory Name</description>
    <label>Company Broker Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>