force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Country__c</fullName>
    <label>Company Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>