force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Id__c</fullName>
    <description>Company Id</description>
    <label>Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>