force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Type__c</fullName>
    <description>Company Type</description>
    <label>Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>