force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Zip__c</fullName>
    <description>Company Zip</description>
    <label>Company Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>