force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Last_Name__c</fullName>
    <description>Contact Last Name</description>
    <label>Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>