force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Contact_Phone_ext__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Phone_ext__c</fullName>
    <description>Contact Phone ext</description>
    <label>Contact Phone ext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>