force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Title__c</fullName>
    <description>Contact Title</description>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>