force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Item_No_Sale_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_No_Sale_Reason_Detail__c</fullName>
    <description>Item No Sale Reason Detail</description>
    <label>Item No Sale Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>