force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_Number__c</fullName>
    <description>Item Number</description>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>