force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_Status__c</fullName>
    <description>Item Status</description>
    <label>Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>