force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_Id__c</fullName>
    <description>Opportunity Id</description>
    <label>Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>