force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_Stage__c</fullName>
    <description>Opportunity Stage</description>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>