force-app/main/default/objects/JMS_Broker_Call_Landing__c/fields/JMS_Salesperson_First_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Salesperson_First_Name__c</fullName>
    <description>Salesperson First Name</description>
    <label>Salesperson First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>