force-app/main/default/objects/JMS_Broker_Call_Landing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>JMS_Broker_Name__c</columns>
    <columns>JMS_Company_Name__c</columns>
    <columns>JMS_Campaign_Name__c</columns>
    <columns>JMS_Item_Number__c</columns>
    <columns>JMS_Item_No_Sale_Reason__c</columns>
    <columns>JMS_Item_Status__c</columns>
    <columns>JMS_Opportunity_Stage__c</columns>
    <columns>JMS_Annual_Case_Volume__c</columns>
    <columns>JMS_Contact_Last_Name__c</columns>
    <columns>JMS_Call_Comments__c</columns>
    <columns>JMS_Company_Broker_Territory_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>